track-05/wp-03: migrate live-komand wire-shape realignment baseline
Adopt the ICON live-komand wire-shape realignment drafted in the main
checkout into this worktree for review and validation (execute-plan
adopt mode). Realigns the InsightConnectAdapter inbound DTOs to komand's
verified Class 3 response shape (Q15):

- ConnectionsResponse: data is an object wrapping connections[] + meta
  (was top-level array + sibling metadata)
- ConnectionViewModel: test array bound from `tests` (was connectionTests)
- Plugin: adds slugName; adapter emits plugin.slugName as source_value
- mvp-seed.yaml: ICON source_value keyed on canonical plugin slug
- fixtures + contract test rebased to the object-wrapped shape

Also carried along from the same uncommitted main diff (flagged for the
review gate, plan-03 non-goals): FanOutCoordinator Math.clamp refactor,
VendorService pattern-match cleanup, LocalStack path-style S3 client +
Dockerfile MAVEN_GOAL arg (local-dev enablers).

Known follow-ups closed in subsequent commits on this branch:
- unit fixtures/contract test assert short slug; reconcile to full slug
- Microsoft Defender not yet seeded in live komand

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>